k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: dgurney/corona-window-api:latest
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: dgurney-docker-hub-credentials
