k8s/rtmp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtmp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rtmp
  template:
    metadata:
      labels:
        component: rtmp
    spec:
      containers:
        - name: rtmp
          image: dgurney/corona-window-rtmp:latest
          ports:
            - containerPort: 1935
      imagePullSecrets:
        - name: dgurney-docker-hub-credentials
