k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: dgurney/corona-window-web:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dgurney-docker-hub-credentials
