k8s/rtmp-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rtmp
  ports:
    - name: tcp-port
      port: 1935
      targetPort: 1935
      protocol: TCP
