k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # tls:
  #   - hosts:
  #       - staging.coronawindow.com
  #     secretName: staging-coronawindow-com
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 4000
          - path: /rtmp/?(.*)
            backend:
              serviceName: rtmp-cluster-ip-service
              servicePort: 1935
